force-app/main/default/objects/StaffDailyReport__c/StaffDailyReport__c.object-meta.xml
<CustomObject>
    <label>職員日報</label>
    <nameField>
        <displayFormat>DailyReport{YYYY}{MM}{DD}-{000}</displayFormat>
        <label>職員日報</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>