force-app/main/default/objects/StaffDailyReport__c/fields/BreakTime__c.field-meta.xml
<CustomField>
    <fullName>BreakTime__c</fullName>
    <formula>TEXT( BreakTimeHour__c ) + &quot;:&quot; + LPAD(TEXT( BreakTimeMinutes__c ), 2, &quot;0&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>休憩時間</label>
    <type>Text</type>
</CustomField>