force-app/main/default/objects/StaffDailyReport__c/fields/BreakTimeHour__c.field-meta.xml
<CustomField>
    <fullName>BreakTimeHour__c</fullName>
    <formula>MFLOOR(  BreakTimeTotal__c  / 60 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>（計算用）休憩時間合計</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>