force-app/main/default/objects/StaffDailyReport__c/fields/BreakTimeMinutes__c.field-meta.xml
<CustomField>
    <fullName>BreakTimeMinutes__c</fullName>
    <formula>MOD(  BreakTimeTotal__c , 60 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>（計算用）休憩分合計</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>