force-app/main/default/objects/StaffDailyReport__c/fields/BreakTimeTerms1__c.field-meta.xml
<CustomField>
    <fullName>BreakTimeTerms1__c</fullName>
    <label>（条件）休憩時間(6Hを超え8H以下)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>45</fullName>
                <default>true</default>
                <label>45</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>