force-app/main/default/objects/StaffDailyReport__c/fields/BreakTimeTerms2__c.field-meta.xml
<CustomField>
    <fullName>BreakTimeTerms2__c</fullName>
    <label>（条件）休憩時間(8Hを超える)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>60</fullName>
                <default>true</default>
                <label>60</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>