force-app/main/default/objects/StaffDailyReport__c/fields/BreakTimeTotal__c.field-meta.xml
<CustomField>
    <fullName>BreakTimeTotal__c</fullName>
    <label>休憩時間（分）</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>