force-app/main/default/objects/StaffDailyReport__c/fields/ClosingMonth__c.field-meta.xml
<CustomField>
    <fullName>ClosingMonth__c</fullName>
    <formula>IF(DAY( Date__c ) &lt; 16, 
IF( MONTH( Date__c ) = 1, 
DATE( YEAR( Date__c )-1, 12, 1), 
DATE( YEAR( Date__c ), MONTH( Date__c ) -1, 1) 
), 
DATE( YEAR( Date__c ), MONTH( Date__c ) , 1) 
)</formula>
    <label>（計算用）締め16日〜15日</label>
    <type>Date</type>
</CustomField>