force-app/main/default/objects/StaffDailyReport__c/fields/EndWork__c.field-meta.xml
<CustomField>
    <fullName>EndWork__c</fullName>
    <label>退社時間</label>
    <length>5</length>
    <type>Text</type>
</CustomField>