force-app/main/default/objects/StaffDailyReport__c/fields/EndWorkTimeStamp__c.field-meta.xml
<CustomField>
    <fullName>EndWorkTimeStamp__c</fullName>
    <label>退社時間タイムスタンプ</label>
    <type>DateTime</type>
</CustomField>