force-app/main/default/objects/StaffDailyReport__c/fields/LateNight__c.field-meta.xml
<CustomField>
    <fullName>LateNight__c</fullName>
    <formula>TEXT(  LateNightHour__c  ) + &quot;:&quot; + LPAD(TEXT( LateNightMinutes__c ), 2, &quot;0&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>深夜時間</label>
    <type>Text</type>
</CustomField>