force-app/main/default/objects/StaffDailyReport__c/fields/LateNightHour__c.field-meta.xml
<CustomField>
    <fullName>LateNightHour__c</fullName>
    <formula>MFLOOR( LateNightTotal__c / 60 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>（計算用）深夜時間合計</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>