force-app/main/default/objects/StaffDailyReport__c/fields/LateNightMinutes__c.field-meta.xml
<CustomField>
    <fullName>LateNightMinutes__c</fullName>
    <formula>MOD(  LateNightTotal__c, 60 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>（計算用）深夜分合計</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>