force-app/main/default/objects/StaffDailyReport__c/fields/LateNightTerms__c.field-meta.xml
<CustomField>
    <fullName>LateNightTerms__c</fullName>
    <label>（条件）深夜時間</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>22</fullName>
                <default>true</default>
                <label>22</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>