force-app/main/default/objects/StaffDailyReport__c/fields/LateNightTotal__c.field-meta.xml
<CustomField>
    <fullName>LateNightTotal__c</fullName>
    <label>深夜時間（分）</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>