force-app/main/default/objects/StaffDailyReport__c/fields/MinutesTotal__c.field-meta.xml
<CustomField>
    <fullName>MinutesTotal__c</fullName>
    <formula>MOD( TotalMinutes__c, 60 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>（計算用）分合計</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>