force-app/main/default/objects/StaffDailyReport__c/fields/OffHours__c.field-meta.xml
<CustomField>
    <fullName>OffHours__c</fullName>
    <formula>TEXT(  OffHoursHour__c  ) + &quot;:&quot; + LPAD(TEXT(  OffHoursMinutes__c  ), 2, &quot;0&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>時間外</label>
    <type>Text</type>
</CustomField>