force-app/main/default/objects/StaffDailyReport__c/fields/OffHoursHour__c.field-meta.xml
<CustomField>
    <fullName>OffHoursHour__c</fullName>
    <formula>MFLOOR(  OffHoursTotal__c  / 60 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>（計算用）時間外時間合計</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>