force-app/main/default/objects/StaffDailyReport__c/fields/OffHoursMinutes__c.field-meta.xml
<CustomField>
    <fullName>OffHoursMinutes__c</fullName>
    <formula>MOD(  OffHoursTotal__c , 60 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>（計算用）時間外分合計</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>