force-app/main/default/objects/StaffDailyReport__c/fields/OffHoursTotal__c.field-meta.xml
<CustomField>
    <fullName>OffHoursTotal__c</fullName>
    <formula>IF (TotalMinutes__c &gt;  VALUE(TEXT(WorkingHoursTerms__c)) , 
    TotalMinutes__c - VALUE(TEXT(WorkingHoursTerms__c)), 
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>時間外（分）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>