force-app/main/default/objects/StaffDailyReport__c/fields/RealTotalMinutes__c.field-meta.xml
<CustomField>
    <fullName>RealTotalMinutes__c</fullName>
    <formula>(VALUE(LEFT( EndWork__c , FIND(&quot;:&quot;, EndWork__c)-1)) * 60 + VALUE(RIGHT( EndWork__c , 2))) - (VALUE(LEFT( StartWork__c , FIND(&quot;:&quot;, StartWork__c)-1)) * 60 + VALUE(RIGHT( StartWork__c , 2))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>（計算用）実労働時間（分）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>