force-app/main/default/objects/StaffDailyReport__c/fields/Staff__c.field-meta.xml
<CustomField>
    <fullName>Staff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>職員名</label>
    <referenceTo>Staff__c</referenceTo>
    <relationshipLabel>職員日報</relationshipLabel>
    <relationshipName>StaffDailyReportToStaff</relationshipName>
    <type>Lookup</type>
</CustomField>