force-app/main/default/objects/StaffDailyReport__c/fields/StaffCode__c.field-meta.xml
<CustomField>
    <fullName>StaffCode__c</fullName>
    <formula>Staff__r.StaffCode__c</formula>
    <label>社員コード</label>
    <type>Text</type>
</CustomField>