force-app/main/default/objects/StaffDailyReport__c/fields/StartTotalTime__c.field-meta.xml
<CustomField>
    <fullName>StartTotalTime__c</fullName>
    <formula>VALUE(LEFT( StartWork__c ,  FIND(&quot;:&quot;, StartWork__c)-1)) * 60 + VALUE(RIGHT( StartWork__c , 2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>（計算用）出社時間（分）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>