force-app/main/default/objects/StaffDailyReport__c/fields/StartWork__c.field-meta.xml
<CustomField>
    <fullName>StartWork__c</fullName>
    <label>出社時間</label>
    <length>5</length>
    <type>Text</type>
</CustomField>