force-app/main/default/objects/StaffDailyReport__c/fields/StartWorkTimeStamp__c.field-meta.xml
<CustomField>
    <fullName>StartWorkTimeStamp__c</fullName>
    <label>出社時間タイムスタンプ</label>
    <type>DateTime</type>
</CustomField>