force-app/main/default/objects/StaffDailyReport__c/fields/SType__c.field-meta.xml
<CustomField>
    <fullName>SType__c</fullName>
    <label>出勤</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>出勤</fullName>
                <default>true</default>
                <label>出勤</label>
            </value>
            <value>
                <fullName>休日</fullName>
            </value>
            <value>
                <fullName>休日出勤</fullName>
            </value>
            <value>
                <fullName>有給</fullName>
            </value>
            <value>
                <fullName>代休特休</fullName>
            </value>
            <value>
                <fullName>病気欠勤</fullName>
            </value>
            <value>
                <fullName>事故欠勤</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>