force-app/main/default/objects/StaffDailyReport__c/fields/TimeTotal__c.field-meta.xml
<CustomField>
    <fullName>TimeTotal__c</fullName>
    <formula>MFLOOR( TotalMinutes__c / 60 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>（計算用）時間合計</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>