force-app/main/default/objects/StaffDailyReport__c/fields/WorkDivision__c.field-meta.xml
<CustomField>
    <fullName>WorkDivision__c</fullName>
    <formula>TEXT(Staff__r.WorkDivision__c)</formula>
    <label>勤務区分</label>
    <type>Text</type>
</CustomField>