force-app/main/default/objects/StaffDailyReport__c/fields/WorkingHoursTerms__c.field-meta.xml
<CustomField>
    <fullName>WorkingHoursTerms__c</fullName>
    <label>（条件）勤務時間</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>480</fullName>
                <default>true</default>
                <label>480</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>