force-app/main/default/objects/StaffDailyReport__c/fields/WorkTime__c.field-meta.xml
<CustomField>
    <fullName>WorkTime__c</fullName>
    <formula>TEXT(TimeTotal__c) + &quot;:&quot; + LPAD(TEXT(MinutesTotal__c), 2, &quot;0&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>労働時間</label>
    <type>Text</type>
</CustomField>